--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test",
   "version": "0.1.0",
-  "homepage": "https://dillerdurak.github.io/Nft-Collection",
+  "homepage": "https://dillerdurak.github.io/Nft-Collecion",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
